@@ -45,6 +45,8 @@ Changes log
           set is not defined.
         - Fixed bug in Finder with ServerResource causing some NPE
           in some cases. Reported by Michael Berman.
+        - Fixed some Maven artifact IDs (Atom, XML and FileUpload
+          extensions). Reported by Jean-Yves Cronier and Remi Dewitte.
     - Enhancements
         - Servlet's UserPrincipal is now transferred into Restlet's
           ClientInfo#subject property. Suggested by Paul Davis.
@@ -89,6 +91,8 @@ Changes log
           Contributed by Bruno Harbulot.
         - Added check for JAXP parsers not supporting XInclude feature.
           Reported by Mikis.
+        - Optimized MetadataService#addCommonExtensions() to prevent
+          multiple array copies. Reported by David Fogel.
     - API changes
         - RepresentationInfo is now concrete and has more constructors.
           Suggested by Lars Heuer.
@@ -140,6 +144,9 @@ Changes log
           add a createInboundFilter() and createOutboundFilter()
           methods to automatically register them when starting the
           application.
+        - Added MetadataService#getAllMediaTypes(), getLanguage() and
+          getMediaType() methods. Reported by David Fogel and suggested
+          by Remi Dewitte.
     - Miscellaneous
         - Component XML configuration has been moved into an Engine 
           ComponentXmlParser class.
